# OS_Lab1

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpu-calc-md5_cpu-calc-md5-mt_Version1.c  cpu-calc-md5_cpu-calc-md5_Version1.c  ema-replace-int_ema-gen-data_Version1.c  ema-replace-int_ema-replace-int_Version1.c  shell.c
.github/: copilot-instructions.md
cpu-calc-md5/: cpu-calc-md5-mt.c  cpu-calc-md5.c
ema-replace-int/: ema-gen-data.c  ema-replace-int.c
shell/: shell.c
